--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
-<%= render "shared/second-header"%>
+<%= render "shared/second-header" %>
 
 <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
+
 <div class='form-wrap'>
   <div class='form-header'>
     <h1 class='form-header-text'>
@@ -8,7 +9,9 @@
     </h1>
   </div>
 
-  <% render 'shared/error_messages', model: f.object %>
+<%= render 'shared/error_messages', model: @user %>
+
+
 
   <div class="form-group">
     <div class='form-text-wrap'>
