エラーハンドリングができる

--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -1,5 +1,7 @@
+<%= render 'shared/error_messages', model: @purchase_address %>
 
 <%= render template: "purchases/index.html.erb" %>
+
 
 <div class='transaction-contents'>
   <!-- 購入ページのコンテンツ -->
