--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,13 +8,11 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
-
-      <!--div class="sold-out">
+    <% if @item.purchases.present? %>
+      <div class="sold-out">
         <span>Sold Out!!</span>
-      </div-->
-
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      </div>
+    <% end %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -25,7 +23,7 @@
       </span>
     </div>
     
-  <% if user_signed_in? %>
+  <% if user_signed_in? && @item.purchases == nil %>
     <% if current_user == @item.user %>
       <%= link_to "商品の編集", edit_item_path(@item), method: :get, class: "item-red-btn" %>
       <p class="or-text">or</p>
