--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,7 +8,7 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
-    <% if @item.purchases.present? %>
+    <% if @item.purchase.present? %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
@@ -22,17 +22,15 @@
         <%= @item.shipping_cost.name %>
       </span>
     </div>
-    
-  <% if user_signed_in? && @item.purchases == nil %>
+
+    <% if user_signed_in? && @item.purchase.blank? %>
     <% if current_user == @item.user %>
       <%= link_to "商品の編集", edit_item_path(@item), method: :get, class: "item-red-btn" %>
       <p class="or-text">or</p>
       <%= link_to "削除", @item, method: :delete, class:"item-destroy" %>
-  <% else %>
-    <%= link_to "購入画面に進む", new_item_purchase_path(@item),class:"item-red-btn"%>
+    <% else %>
+      <%= link_to "購入画面に進む", new_item_purchase_path(@item),class:"item-red-btn"%>
     <% end %>
-  <% else %>
-    <%= link_to "トップページに戻る", root_path, class: "item-red-btn" %>
   <% end %>
 
     <div class="item-explain-box">
